<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/driver_text_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/driver_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/driver_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/model_text_static"
        android:text="@string/model_text"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="15dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/model_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reg_number_text_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_number_text"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="15dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/reg_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/start_address_text_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_address_text"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="15dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/start_address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/end_address_text_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_address_text"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="15dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/end_address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/order_date_text_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_data_text"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="15dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/order_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price_text_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_text"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="15dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>